Fix lets talk hover layout shift

--- a/src/app/components/above-the-fold/above-the-fold.component.scss
+++ b/src/app/components/above-the-fold/above-the-fold.component.scss
@@ -412,7 +412,6 @@ section {
     }
     @media (hover: hover) and (pointer: fine) {
       &:hover {
-        padding: 1.5rem 2.5rem;
         background: $Purple;
         cursor: pointer;
       }
